Base62를 이용한 짧은 URL 생성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,3 +42,4 @@ jwt:
     refresh:
         expiration: 864000000 #10일 (60 * 60 * 24 * 10) * 1000
         header: "X-REFRESH-TOKEN"
+domain: "http://localhost:7777/"
