--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -72,6 +72,12 @@ spring:
 #            minimum-idle: 1
 #            maximum-pool-size: 5
 #            pool-name: MYSQL_DB
+    h2:
+        console:
+            enabled: true
+            path: /h2-console
+            settings:
+                web-allow-others: true
     datasource:
         driver-class-name: org.h2.Driver
         url: "jdbc:h2:mem:spring_assignments;MODE=MYSQL;"
